--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,3 @@
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
-set(sdkVersion 2.1.0)
-set(toolchainVersion 13_3_Rel1)
-set(picotoolVersion 2.1.0)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
-# ====================================================================================
 # Generated Cmake Pico project file
 
 cmake_minimum_required(VERSION 3.13)
@@ -68,6 +54,9 @@ target_include_directories(LedBuzz PRIVATE
 )
 
 # Add any user requested libraries
-target_link_libraries(LedBuzz 
-        
+target_link_libraries(LedBuzz
+
         )
+
+pico_add_extra_outputs(LedBuzz)
+
